css/style.css
/* ... */
  .row {
    margin: 28px 0; /* 25px top and bottom, 0 left and right */
    padding-bottom: 28px; 
    border-bottom: 1px 
    solid #e0e0e0; 
    }

  
  .row-last {
    margin: 28px 0 0 0; /* 25px top and bottom, 0 left and right */
    padding-bottom: 44px; 
}


 /* Header & Nav section */
 header {
    background-color: #fefefe;
    padding: 10px 0; /* Adds a 10px inner spacing, with none L and R */
    margin: 0 auto; /* No spacing to top and bottom and auto spacing to left and right */
	box-shadow: 0 2px 18px rgba(89, 88, 89, 0.2); /* adds drop shadow */
    position: fixed; /* adds scroll */
    width: 100%; /* expands to full screen widths */
}

/*
nav {
    display: inline-block;
    width: 100%;
}
*/

.logo {
    max-width: 150px;
}
  
nav > ul {                                        /* removing bullet points in unordered list */
    list-style-type: none;
    padding: 0;
    margin: 0;                                    /* removes margin gap */
}

.navtoggle li:not(:last-child) {            /* hides all the list elements except for the hamburger menu icont */
    display: none;
}

.navtoggle, .navtoggle.responsive {        /*positions menu icon to the R of <header> and aligns it with the logo */
    position: relative;
}

.navtoggle li .icon {                      /*positions hamburger menu icon and makes icon larger */
    right: 0;
    top: 2px;
    font-size: 20px;
    padding-right: 0;
}

.navtoggle.responsive li  {           /*overrides previous code and shows the complete menu when .responsive class is toggled */
    display: block;
}

.navtoggle.responsive nav {
    padding: 24px 0 0;
}
  
  .navtoggle.responsive li  {
    display: block;
    padding: 10px 0;
    border-top: 1px solid #e7e7e7;
}
  
  .navtoggle.responsive li:last-child  {
    padding: 0 0 10px;
}

/* Footer & Contact Section */

footer{
    width: 100%;
}

#contact {
    text-align: center;
    padding: 16px 0 16px 0;
    background-color: #fefefe;
}

#contact .container {
    margin: 50px, 0;
}

.phone {
    padding-top: 24px;
}
.socials{
    display: inline-block;
    align-items: center;
    padding: 16px;

}

.svg-container{
    width: 72px; /* (40px + 16px + 16px) */
    height: 72px; /* (40px + 16px + 16px) */
    display: inline-block; /* aligns icosn in a row */
}

.svg-logo {
    height: 40px;
    width: 40px;
}

.svg-logo:hover {
    opacity: .85;
}



/* Main section */
main {
    padding-top: 88px;
    background-color:#f6f6f6;
  }


/* ---- INDEX/HOME ---- */

    /* Hero Section */
    #hero {
        background-color: #fefefe; /* makes background color same as header */
        padding: 20px 0; /* adds 20px to top and bottom */
        display: inline-block; /* margins of elements will only affect elements in this section */
        width: 100%; /* will expand and shrink to full browser width */
        text-align: center;
    }

    #hero h1 {
        font-family: 'Wix Madefor Display', sans-serif;
        font-weight: 800;
        font-size: 3.4em;
        color: #23B9B0;
        margin: 20px 0; /* default margins changed to top 20 px bottom 20 px */
    }

    #hero h2{
        font-weight: 500;
        margin: 24px;
    }
    
    #hero p{
        margin-top: 0;
        color: #858585;
    }

    #hero p.special-paragraph {
        padding-top: 32px;
        color: #474747;
    }


    /* Projects Section */
    
    #projects h2 {
        text-align: center;
        color: #3d3d3d;
        padding: 8px 0;
    }

    #projects h3 {
        margin: 24px 0 0px 0;
    }


/* ---- ABOUT ---- */

    hero .container{
        display: flex;
        flex-direction: column;
    }

    h1 {
        font-family: 'Wix Madefor Display', sans-serif;
        font-weight: 800;
        font-size: 3.9em;
        color: #23B9B0;
        margin: 20px 24; /* default margins changed to top 24 px bottom 24 px */
        text-align: center;
        letter-spacing: 0.05em;
    }

    .about-img {
        display: block;
        margin-left: auto;
        margin-right: auto;
        width: 30%;
        max-height: 50%;
        border-radius: 16px;
      }

    #hero .about-intro {
        order: 3;
        margin-top: 20px;
        text-align: center;
    }

    /* My Story */
    #about h2 {
        text-align: center;
        color: #3d3d3d;
        padding: 8px 0;
    }

    #about h4{
        margin: 32px 0 12px 0;
    }

    /* Skills & Tools */
    #about h3{
        margin: 32px 0 12px 0;
    }
    #about ul{
        padding-left: 24px;
    }

    #about ul >li {
        padding: 4px 0;
    }

    .resume {
        text-align: center;
    }

    #about .row-last{
        padding-bottom: 22px;
    }

    #about ul{
        margin-bottom: 0px;
    }


   

/* ---- PORTFOLIO PROJECTS ---- */


    /* Intro Section */
    #intro {
        text-align: left;
        background-color: #fefefe; /* makes background color same as header */
        padding: 20px 0; /* adds 20px to top and bottom */
        display: inline-block; /* margins of elements will only affect elements in this section */
        width: 100%; /* will expand and shrink to full browser width */
        text-align: center;
    }

    #intro h1 {
        font-family: 'Wix Madefor Display', sans-serif;
        font-weight: 800;
        font-size: 3.4em;
        color: #23B9B0;
        margin: 20px 24; /* default margins changed to top 24 px bottom 24 px */
    }
    
    #intro p {
        text-align: left;
        color: #858585;
    }

    #intro .preview {
        margin: 32px 0 24px 0;
    }

    #context, #user-flow, #wireframes, #testing, #brand, #final-designs {
        scroll-margin-top: 150px; /* Equal to the height of the fixed header */
      }


    /* Process Section*/
    #process .row-context { 
        padding-bottom: 25px; 
        border-bottom: 1px solid #e0e0e0; 
    }

    #process .row-user-flow { 
        padding-bottom: 25px; 
        border-bottom: 1px solid #e0e0e0; 
    }
/* ... */

